# genlayer-testing-suite

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  releaserc.toml
.claude/: CLAUDE.md  settings.json
.claude/skills/: genlayer-direct-tests.md  write-direct-tests.md
.github/workflows/: publish.yml  sync-docs.yml  tests.yml
docs/: direct-runner.md  studio-runner.md
docs/api-references/: direct.md  glsim.md  index.md  integration.md
glsim/: README.md  __init__.py  __main__.py  consensus_main_contract.json  engine.py  genvm_stubs.py  server.py  state.py  tx_decoder.py
gltest/: __init__.py  accounts.py  assertions.py  cli.py  decorators.py  fixtures.py  plugin_config.py  plugin_hooks.py  types.py  utils.py
gltest/artifacts/: __init__.py  contract.py
gltest/config/: __init__.py  types.py  user.py
gltest/contracts/: contract.py  contract_factory.py  contract_functions.py  method_stats.py
gltest/direct/: loader.py  sdk_loader.py  vm.py  wasi_mock.py
gltest/glchain/: account.py  client.py  contract.py
gltest/helpers/: fixture_snapshot.py  take_snapshot.py
gltest/native/: __init__.py  loader.py  pytest_plugin.py  sdk_loader.py  types.py  wasi_mock.py
gltest/sample_project/: README.md
gltest/validators/: validator_factory.py
gltest_cli/: logging.py  main.py
gltest_cli/config/: constants.py  plugin.py  plugin_hooks.py  pytest_context.py  types.py  user.py
scripts/: generate-api-docs.py  semantic-version-release.sh
tests/artifact/: test_contract_definition.py
tests/assertions/: test_assertions.py
(+55 files in other folders)
