[project]
name = "genlayer-testing-suite"
version = "0.1.0"
description = "GenLayer Testing Suite"
authors = [{ name = "Genlayer" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest",
    "typer",
]

[project.scripts]
gltest = "gltest.cli:main"

[tool.setuptools.package-data]
gltest = ["sample_project/**/*"]