[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genlayer-test"
version = "0.20.4"
description = "GenLayer Testing Suite"
authors = [
    { name = "GenLayer" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "setuptools>=77.0",
    "genlayer-py==0.9.0",
    "colorama>=0.4.6",
    "pyyaml",
    "python-dotenv"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
sim = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "httpx>=0.24",
    "eth-account>=0.10",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "scripts*"]

[project.entry-points.pytest11]
gltest = "gltest_cli.config.plugin"
gltest_direct = "gltest.direct.pytest_plugin"

[project.scripts]
gltest = "gltest_cli.main:main"
glsim = "glsim.__main__:main"